core/test/fixtures/invalid-gatherers/missing-before-pass.js
/**
 * @license
 * Copyright 2016 Google LLC
 * SPDX-License-Identifier: Apache-2.0
 */

class MissingBeforePass {
  pass() {}
  afterPass() {}
}

export default MissingBeforePass;
